Styles & naming fixed, Modals overflow behavior

--- a/frontend/src/components/ModalAddTransaction/ModalAddTransaction.module.css
+++ b/frontend/src/components/ModalAddTransaction/ModalAddTransaction.module.css
@@ -132,6 +132,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
     opacity: 1;
     visibility: visible;
     z-index: 3;
